--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "antd": "^4.6.4",
     "axios": "^0.20.0",
     "axois": "^0.0.1-security",
+    "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
