--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "antd": "^4.6.4",
     "axios": "^0.20.0",
     "axois": "^0.0.1-security",
-    "jwt-decode": "^3.0.0-beta.2",
+    "jwt-decode": "^3.0.0",
     "jwt-token": "^1.0.9",
+    "package-lock.json": "^1.0.0",
+    "package.json": "^2.0.1",
     "query-string": "^6.13.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
